# rstats-formatter

./: .travis.yml  Makefile  README.md  pyproject.toml  readme.md  rstats-formatter.py  setup.cfg  setup.py
.github/workflows/: main.yml
rstats_logreader/: __init__.py  cli.py  reader.py
test/: __init__.py  test_cli.py  test_reader.py
