################################################################################
#                               rstats-logreader                               #
#   Parse RStats logfiles, display bandwidth usage, convert to other formats   #
#                       (C) 2016, 2019-2020 Jeremy Brown                       #
#       Released under version 3.0 of the Non-Profit Open Source License       #
################################################################################

[build-system]
build-backend = "setuptools.build_meta"

requires = [
	"setuptools >= 43.0.0",
	"wheel",
	]
