################################################################################
#                               rstats-logreader                               #
#   Parse RStats logfiles, display bandwidth usage, convert to other formats   #
#                            (C) 2016, 2019 Mischif                            #
#       Released under version 3.0 of the Non-Profit Open Source License       #
################################################################################

[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
# license_file is deprecated when building wheels,
# but support for license_file*s* in sdists is not yet included
# (see pypa/setuptools#1767)
license_file = LICENSE
license_files = LICENSE

[tool:pytest]
addopts = -v -s

[coverage:report]
show_missing = True
